--- a/src/app/pages/equipo/equipo.component.html
+++ b/src/app/pages/equipo/equipo.component.html
@@ -4,7 +4,7 @@
     <h1 class="font-cinzel">Nuestro equipo</h1>
     <p class="intro">
       Contamos con un <strong>equipo multidisciplinar</strong> que combina la experiencia de la psicología,
-      la integración social y las <strong>nuevas tecnologías</strong>, creando una fusión perfecta entre la
+      la educación social, las <strong>nuevas tecnologías y las terapias alternativas</strong>, creando una fusión perfecta entre la
       asistencia personal y la asistencia telemática. De esta manera, ofrecemos un acompañamiento completo,
       adaptado y cercano a las necesidades reales de nuestra comunidad.
     </p>
@@ -21,7 +21,7 @@
     </article>
 
     <article class="area">
-      <h2 class="font-cinzel">Equipo de Integración Social</h2>
+      <h2 class="font-cinzel">Equipo Social</h2>
       <p>
         Transforma los contenidos en dinámicas participativas y acompañamiento cercano, fomentando hábitos
         saludables y el apoyo comunitario en el día a día.
